adjust the argline for tycho-maven-plugin

--- a/application/tests/pom.xml
+++ b/application/tests/pom.xml
@@ -59,6 +59,7 @@
 		<test.excludes.default>**/*$*</test.excludes.default>
 		<fail.if.no.tests>true</fail.if.no.tests>
 		<jmc.config.path>${project.basedir}/../../configuration</jmc.config.path>
+		<tycho.testArgLine.local></tycho.testArgLine.local>
 	</properties>
 	<profiles>
 		<profile>
@@ -107,6 +108,9 @@
 		</profile>
 		<profile>
 			<id>coverage</id>
+			<properties>
+				<tycho.testArgLine.local>${tycho.testArgLine}</tycho.testArgLine.local>
+			</properties>
 			<build>
 				<plugins>
 					<plugin>
@@ -119,9 +123,6 @@
 								<goals>
 									<goal>prepare-agent</goal>
 								</goals>
-								<configuration>
-									<propertyName>surefireArgLine</propertyName>
-								</configuration>
 							</execution>
 							<execution>
 								<id>post-unit-test</id>
@@ -150,7 +151,6 @@
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<version>${tycho.version}</version>
 				<configuration>
-					<argLine>${surefireArgLine}</argLine>
 					<appArgLine>-nl en</appArgLine>
 					<includes>${test.includes}</includes>
 					<excludes>
